# edith

./: .env.example  .gitignore  README.md  config.py  config.toml.example  main.py  pyproject.toml
components/: __init__.py  hass.py  immich.py  time.py  vasttrafik.py
